--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
 	padding: 5%;
 	font-weight: normal;
 	display: flex;
-	min-height: 100vh;
+	min-height: 80vh;
 	align-items: center;
 	justify-content: center;
 	text-align: center;
@@ -27,6 +27,7 @@ button {
 	border: 0;
 	border-radius: 3px;
 	color: white;
+	cursor: pointer;
 	font: inherit;
 	font-weight: bold;
 	padding: 1rem 2rem;
