--- a/main.css
+++ b/main.css
@@ -14,10 +14,13 @@ body {
 	margin: 0;
 	padding: 5%;
 	font-weight: normal;
+	display: -ms-flexbox;
 	display: flex;
 	min-height: 80vh;
-	align-items: center;
-	justify-content: center;
+	-ms-flex-align: center;
+		align-items: center;
+	-ms-flex-pack: center;
+		justify-content: center;
 	text-align: center;
 	background-color: #4cabef;
 	color: #fff;
@@ -44,11 +47,13 @@ button:focus {
 }
 
 button:hover {
-	transform: scale(1.05);
+	-webkit-transform: scale(1.05);
+			transform: scale(1.05);
 }
 
 div {
-	animation: fade-in 1s forwards ease-out;
+	-webkit-animation: fade-in 1s forwards ease-out;
+			animation: fade-in 1s forwards ease-out;
 }
 
 h1 {
@@ -62,10 +67,22 @@ h1 {
 	}
 }
 
+@-webkit-keyframes fade-in {
+	from {
+		opacity: 0;
+		-webkit-transform: translate(0, 10%);
+				transform: translate(0, 10%);
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 @keyframes fade-in {
 	from {
 		opacity: 0;
-		transform: translate(0, 10%);
+		-webkit-transform: translate(0, 10%);
+				transform: translate(0, 10%);
 	}
 	to {
 		opacity: 1;
