--- a/main.css
+++ b/main.css
@@ -51,7 +51,11 @@ button:hover {
 			transform: scale(1.05);
 }
 
-div {
+button:disabled {
+	opacity: 0.5;
+}
+
+section {
 	-webkit-animation: fade-in 1s forwards ease-out;
 			animation: fade-in 1s forwards ease-out;
 }
@@ -61,12 +65,34 @@ h1 {
 	margin: 2rem 0;
 }
 
-.voices {
+svg {
+	width: 1rem;
+	height: 1rem;
+	fill: currentColor;
+}
+
+.hidden {
+	position: absolute;
+	overflow: hidden;
+	width: 0;
+	height: 0;
+	pointer-events: none;
+}
+
+.audio {
 	position: absolute;
 	top: 1rem;
 	right: 1rem;
+}
+
+.audio button {
+	padding: 0.5rem 1rem;
+}
+
+.audio select {
 	max-width: 200px;
 }
+
 
 @media screen and (max-width: 40em) {
 	h1 {
