--- a/main.css
+++ b/main.css
@@ -2,6 +2,8 @@ html {
 	box-sizing: border-box;
 	font-size: 16px;
 	font-family: -apple-system, Roboto, Helvetica, Arial, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 *,
@@ -12,7 +14,7 @@ html {
 
 body {
 	margin: 0;
-	padding: 5%;
+	padding: 3.5rem 1rem;
 	font-weight: normal;
 	display: -ms-flexbox;
 	display: flex;
@@ -24,6 +26,19 @@ body {
 	text-align: center;
 	background-color: #4cabef;
 	color: #fff;
+}
+
+footer {
+	-webkit-transform: translate(-50%, 0);
+			transform: translate(-50%, 0);
+	position: absolute;
+	bottom: 1rem;
+	left: 50%;
+}
+
+section {
+	-webkit-animation: fade-in 1s forwards ease-out;
+			animation: fade-in 1s forwards ease-out;
 }
 
 button {
@@ -38,6 +53,7 @@ button {
 	padding: 1rem 3rem;
 	text-decoration: none;
 	text-transform: uppercase;
+	outline: 0;
 }
 
 button:hover,
@@ -55,9 +71,9 @@ button:disabled {
 	opacity: 0.5;
 }
 
-section {
-	-webkit-animation: fade-in 1s forwards ease-out;
-			animation: fade-in 1s forwards ease-out;
+button svg {
+	width: 1rem;
+	height: 1rem;
 }
 
 h1 {
@@ -65,9 +81,13 @@ h1 {
 	margin: 2rem 0;
 }
 
+a {
+	color: currentColor;
+}
+
 svg {
-	width: 1rem;
-	height: 1rem;
+	width: 1.5rem;
+	height: 1.5rem;
 	fill: currentColor;
 }
 
@@ -80,33 +100,12 @@ svg {
 }
 
 .audio {
-	display: flex;
 	overflow: hidden;
 	position: absolute;
 	top: 1rem;
 	right: 1rem;
-	border: 2px solid #fff;
-	border-radius: 3px;
-}
-
-.audio button,
-.audio select {
-	border-width: 0;
-	border-radius: 0;
-	font: inherit;
-	margin: 0;
-	padding: 0.5rem 1rem;
-}
-
-.audio select {
-	-webkit-appearance: none;
-	   -moz-appearance: none;
-			appearance: none;
-	background-color: transparent;
-	color: #fff;
-	max-width: 200px;
-	outline: 0;
-	border-left: 2px solid #fff;
+	padding: 0.5rem 0.75rem;
+	line-height: 1;
 }
 
 @media screen and (max-width: 40em) {
