--- a/main.css
+++ b/main.css
@@ -57,7 +57,8 @@ button {
 }
 
 button:hover,
-button:focus {
+button:focus,
+button.is-active {
 	background-color: #fff;
 	color: #4cabef;
 }
@@ -99,13 +100,20 @@ svg {
 	pointer-events: none;
 }
 
-.audio {
-	overflow: hidden;
+.audio,
+.notification {
 	position: absolute;
 	top: 1rem;
-	right: 1rem;
 	padding: 0.5rem 0.75rem;
 	line-height: 1;
+}
+
+.audio {
+	right: 1rem;
+}
+
+.notification {
+	left: 1rem;
 }
 
 @media screen and (max-width: 40em) {
